feat: 클라이언트에 맞게 투표 생성 dto 수정